# ChangeLog for net-irc/xchat
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.79 2004/01/07 16:35:06 gustavoz Exp $

  07 Jan 2004; <gustavoz@gentoo.org> xchat-2.0.7.ebuild:
  keyworded ~sparc and ~hppa

  05 Jan 2004; Jason Wever <weeve@gentoo.org> xchat-2.0.5-r1.ebuild:
  Marked stable on sparc.

*xchat-2.0.7 (04 Jan 2004)

  04 Jan 2004; Markus Nigbur<pyrania@gentoo.org> xchat-1.8.11.ebuild, xchat-2.0.1.ebuild,
  xchat-2.0.3-r1.ebuild, xchat-2.0.4.ebuild, xchat-2.0.5-r1.ebuild,
  xchat-2.0.6-r1.ebuild:
  Header update.

  04 Jan 2004; Markus Nigbur <pyrania@gentoo.org> xchat-2.0.7.ebuild:
  Version Bump.

  15 Dec 2003; Guy Martin <gmsoft@gentoo.org> xchat-2.0.6-r1.ebuild:
  Marked stable on hppa.

*xchat-2.0.6-r1 (12 Dec 2003)

  12 Dec 2003; <solar@gentoo.org> xchat-2.0.6-r1.ebuild,
  files/xchat-2.0.6-fix_dccsend.patch:
  fix denial of service bug in dcc.c

*xchat-2.0.6 (28 Nov 2003)

  28 Nov 2003; foser <foser@gentoo.org> xchat-2.0.6.ebuild :
  New release

*xchat-2.0.5-r1 (23 Nov 2003)

  23 Nov 2003; Chuck Short <zul@gentoo.org> xchat-2.0.5-r1.ebuild,
  files/xc205-fix-emptyword.diff, files/xc205-fix64bit.diff:
  New version, adds latest patches.
  Ebuild originally submitted by Bluefox Phoenix Lucid <bluefoxicy@linux.net>
  Closes bug number 34060.

  05 Oct 2003; foser <foser@gentoo.org> xchat-2.0.{4,5}.ebuild :
  Fix USE depend (#29942)

  28 Sep 2003; Markus Nigbur <pyrania@gentoo.org> xchat-2.0.5.ebuild:
  Added ~amd64 keyword. request by brad@mainstreetsoftworks.com in bug #29808.

*xchat-2.0.5 (25 Sep 2003)

  25 Sep 2003; foser <foser@gentoo.org> xchat-2.0.5.ebuild :
  New version

  04 Sep 2003; Mike Gardiner <obz@gentoo.org> xchat-2.0.4.ebuild:
  Added local use flags to 2.0.4 for enabling the text frontend, and disabling
  the gtk front end. Testing at the moment, can be backported

  21 Aug 2003; Mike Gardiner <obz@gentoo.org> xchat-2.0.4.ebuild: