@@ -1,10 +1,10 @@
 MD5 3c00efd4e318063b3406138eeb1be17d xchat-2.0.1.ebuild 1946
-MD5 16da6976a7eba9df62f78c92c935297b xchat-2.0.6-r1.ebuild 2391
+MD5 1c89665fb3deb8107b15634c5565a8ea xchat-2.0.6-r1.ebuild 2390
 MD5 dd7301da7d85bb9a2a559e0a2731d7c1 xchat-1.8.11.ebuild 2217
 MD5 2345c617a42da1bcc7366c494f9f8daf xchat-2.0.5-r1.ebuild 2103
-MD5 c15b1a18da63acc223d83c0502cf6d08 xchat-2.0.7.ebuild 1971
+MD5 f7f14126c94be21eb75a938585454ce4 xchat-2.0.7.ebuild 1989
 MD5 e854822e5d01ade04f90b49facdf757c xchat-2.0.4.ebuild 2012
-MD5 f2bb21c75834363e71d1ac7a107307a7 ChangeLog 11315
+MD5 2ac14c9584018a81db5bb5d229f480c2 ChangeLog 11466
 MD5 fb5772136a872c08434566d4f0bcdc7f metadata.xml 179
 MD5 ec167e19f40de2ff5b4b85f74131a68f xchat-2.0.3-r1.ebuild 1915
 MD5 1ee812a2b3e28e3866413e75a80ff983 files/digest-xchat-2.0.1 64
