@@ -1,6 +1,10 @@
 # ChangeLog for net-irc/xchat
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.79 2004/01/07 16:35:06 gustavoz Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-irc/xchat/ChangeLog,v 1.80 2004/01/07 22:17:35 pyrania Exp $
+
+  07 Jan 2004; Markus Nigbur <pyrania@gentoo.org> xchat-2.0.6-r1.ebuild,
+  xchat-2.0.7.ebuild:
+  Keyworded 2.0.6-r1 x86 and 2.0.7 ~ppc, ~alpha, ~amd64
 
   07 Jan 2004; <gustavoz@gentoo.org> xchat-2.0.7.ebuild:
   keyworded ~sparc and ~hppa
